<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hintGameTitle">Title</string>
    <string name="hintGamePlatform">Platform</string>
    <string name="hintDay">Day</string>
    <string name="hintMonth">Month</string>
    <string name="hintYear">Year</string>
    <string name="action_clear_backlog">Clear game backlog</string>
    <string name="contentDescriptionCreateGame">Create new game backlog items</string>
    <string name="contentDescriptionSaveGame">Save game</string>
</resources>